atvs_extras/projeto_C/19.2-Alocacao-Dinamica-de-Memoria##Alocacao-de-vetores##/errors.err
main-versao2.c: In function ‘alocaVetor’:
main-versao2.c:8:15: warning: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
     *resposta =(int*)  malloc((tamanho +1 )* sizeof(int));
               ^
main-versao2.c: In function ‘main’:
main-versao2.c:29:14: error: subscripted value is neither array nor pointer nor vector
         vetor[i] = i;
              ^
main-versao2.c:30:41: error: subscripted value is neither array nor pointer nor vector
         printf("vetor[%d] = %d\n", vetor[i], i);
                                         ^
main-versao2.c:34:10: warning: passing argument 1 of ‘free’ makes pointer from integer without a cast [-Wint-conversion]
     free(vetor);
          ^~~~~
In file included from main-versao2.c:2:
/usr/include/stdlib.h:563:25: note: expected ‘void *’ but argument is of type ‘int’
 extern void free (void *__ptr) __THROW;
                   ~~~~~~^~~~~
